<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_back"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/gad_img"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/gdg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/gad_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_gravity="center"
                    android:src="@drawable/gads_header"
                    android:scaleType="centerInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/tab_layout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/project_sub" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <EditText
                        app:layout_constraintVertical_bias="0.2"

                        android:layout_margin="5dp"
                        android:background="@drawable/round_corner"
                        android:id="@+id/first_name"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/screen_center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:id="@+id/screen_center"
                    android:layout_width="1dp"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/first_name"
                    app:layout_constraintBottom_toBottomOf="@id/first_name"/>

                    <EditText
                        app:layout_constraintVertical_bias="0.2"
                        android:layout_margin="5dp"
                        android:id="@+id/last_name"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:hint="@string/last_name"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no"
                        android:background="@drawable/round_corner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/screen_center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                <EditText
                    app:layout_constraintVertical_bias="0.15"
                    android:layout_margin="5dp"
                    android:id="@+id/email_address"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    android:background="@drawable/round_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <EditText
                    app:layout_constraintVertical_bias="0.2"
                    android:layout_margin="5dp"
                    android:id="@+id/github_link"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:hint="@string/project_on_github_link"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    android:background="@drawable/round_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <Button
                    android:id="@+id/submit_btn"
                    android:padding="10dp"
                    android:layout_gravity="end"
                    android:text="@string/submit"
                    android:background="@drawable/btn_rounded_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/github_link"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>